Fixed whitespace
Made app more readable, added errorhandling comment, fixed so no background color on text in dbinfo

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -16,8 +16,6 @@ h1 {
 
 .dbinfo {
     margin: 50px 50px;
-    border: #555;
-    background-color: bisque;
 }
 
 .recipe_list {
